--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://karimaamiri3002:CH0x8bkvvNSDvmc0@cluster0.q9hwl.mongodb.net/Job_offers_DB?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://ayamoukil2210:XuQx3XWilrNaVdRB@cluster0.l28hq.mongodb.net/job_finder?retryWrites=true&w=majority
